force-app/main/default/objects/Campaigns__c/Campaigns__c.object-meta.xml
<CustomObject>
    <label>Campaign*</label>
    <nameField>
        <label>Campaigns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>