force-app/main/default/objects/Campaigns__c/fields/AdAction_Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>AdAction_Offer_ID__c</fullName>
    <label>AdAction Offer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>