force-app/main/default/objects/Campaigns__c/fields/Advertiser_URL__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_URL__c</fullName>
    <label>Advertiser URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>