force-app/main/default/objects/Campaigns__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Android Apps</fullName>
            </value>
            <value>
                <fullName>Android ID Required</fullName>
            </value>
            <value>
                <fullName>CPE/CPA</fullName>
            </value>
            <value>
                <fullName>Google AID Required</fullName>
            </value>
            <value>
                <fullName>IDFA Required</fullName>
            </value>
            <value>
                <fullName>Incentive Campaign</fullName>
            </value>
            <value>
                <fullName>Incentive Lead Gen</fullName>
            </value>
            <value>
                <fullName>Incentive Mobile Apps</fullName>
            </value>
            <value>
                <fullName>iOS Apps</fullName>
            </value>
            <value>
                <fullName>iPad Only</fullName>
            </value>
            <value>
                <fullName>iPad Only Apps</fullName>
            </value>
            <value>
                <fullName>iPhone, iPod, iPad</fullName>
            </value>
            <value>
                <fullName>iPhone Only App</fullName>
            </value>
            <value>
                <fullName>Mobile Lead Gen</fullName>
            </value>
            <value>
                <fullName>Paid App</fullName>
            </value>
            <value>
                <fullName>Reward Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>