force-app/main/default/objects/Campaigns__c/fields/Claim_Window__c.field-meta.xml
<CustomField>
    <fullName>Claim_Window__c</fullName>
    <description>How many days from click to open will the advertiser attribute the lead to us.</description>
    <label>Claim Window</label>
    <length>100</length>
    <type>Text</type>
</CustomField>