force-app/main/default/objects/Campaigns__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>