force-app/main/default/objects/Campaigns__c/fields/Direct_Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Direct_Advertiser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Advertiser</label>
    <type>Checkbox</type>
</CustomField>