force-app/main/default/objects/Campaigns__c/fields/Drop_Box_Creative_URL__c.field-meta.xml
<CustomField>
    <fullName>Drop_Box_Creative_URL__c</fullName>
    <label>Drop Box: Creative URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>