force-app/main/default/objects/Campaigns__c/fields/If_Paused_Pending_or_Expired_Why__c.field-meta.xml
<CustomField>
    <fullName>If_Paused_Pending_or_Expired_Why__c</fullName>
    <label>If Paused, Pending or Expired_Why?</label>
    <type>TextArea</type>
</CustomField>