force-app/main/default/objects/Campaigns__c/fields/Manually_Passing_Cost_Data__c.field-meta.xml
<CustomField>
    <fullName>Manually_Passing_Cost_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the advertiser requires us to manually pass the cost in the URL</description>
    <inlineHelpText>Please check this box if the advertiser requires us to manually pass the cost data in the URL</inlineHelpText>
    <label>Manually Passing Cost Data</label>
    <type>Checkbox</type>
</CustomField>