force-app/main/default/objects/Campaigns__c/fields/Network_Daily_Caps__c.field-meta.xml
<CustomField>
    <fullName>Network_Daily_Caps__c</fullName>
    <label>Network Daily Caps</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>