force-app/main/default/objects/Campaigns__c/fields/Our_Payout__c.field-meta.xml
<CustomField>
    <fullName>Our_Payout__c</fullName>
    <label>Our Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>