force-app/main/default/objects/Campaigns__c/fields/Partner_Daily_Caps__c.field-meta.xml
<CustomField>
    <fullName>Partner_Daily_Caps__c</fullName>
    <label>Partner Daily Caps</label>
    <type>TextArea</type>
</CustomField>