force-app/main/default/objects/Campaigns__c/fields/Partner_Payout__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payout__c</fullName>
    <label>Partner Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>