force-app/main/default/objects/Campaigns__c/fields/Partner_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tracking_URL__c</fullName>
    <label>Partner Tracking URL</label>
    <type>Url</type>
</CustomField>