force-app/main/default/objects/Campaigns__c/fields/Rebrokering_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Rebrokering_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebrokering Allowed</label>
    <type>Checkbox</type>
</CustomField>