force-app/main/default/objects/Campaigns__c/fields/Tracking_Solution__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Solution__c</fullName>
    <label>Tracking Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FingerPrint</fullName>
            </value>
            <value>
                <fullName>IDFA</fullName>
            </value>
            <value>
                <fullName>Google AID</fullName>
            </value>
            <value>
                <fullName>Cookie-Based Pixel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>