force-app/main/default/objects/Campaigns__c/fields/Traffic_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Restrictions__c</fullName>
    <label>Traffic Restrictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>