force-app/main/default/objects/Campaigns__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Our_Payout__c</columns>
    <columns>Partner_Payout__c</columns>
    <columns>Network_Daily_Caps__c</columns>
    <columns>Category__c</columns>
    <columns>AdAction_Offer_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
</ListView>