force-app/main/default/objects/Campaigns__c/listViews/Incent_Live_Campaigns.listView-meta.xml
<ListView>
    <fullName>Incent_Live_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Network_Daily_Caps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>includes</operation>
        <value>Incentive Campaign</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Incent Live Campaigns</label>
</ListView>